2008-09-05  Rodney Dawes  <dobey.pwns@gmail.com>
	* .gitignore:
  * svg/.gitignore:
  Update .gitignore files

  * configure.ac:
  Only enable rendering by default when building from a repo checkount

  * po/POTFILES.in:
  Update to reference index.theme.in.in instead of index.theme.in

	* svg/Makefile.am:
  Update to list svg files properly
  Update the rules to handle generating the PNGs and disting them in a bet
  and more efficient manner

  * svg/media-flash.svg:
  Add a single icon as an initial item for the theme

--- a/.gitignore
+++ b/.gitignore
@@ -8,13 +8,7 @@ Makefile.in
 aclocal.m4
 autom4te-2.5x.cache
 autom4te.cache
-config.cache
-config.guess
-config.h
-config.h.in
-config.log
-config.status
-config.sub
+config.*
 configure
 install-sh
 intl
@@ -27,3 +21,9 @@ stamp-h*
 ltmain.sh
 render-bitmaps.pl
 
+8x8
+16x16
+22x22
+32x32
+48x48
+256x256
