--- a/svg/Makefile.am
+++ b/svg/Makefile.am
@@ -1,44 +1,39 @@
 
-icon_in_files =
+icon_in_files = $(shell for i in `find . -name "*.svg"`; do printf "$$i "; done)
 icon_files = $(icon_in_files:.svg=.png)
 
 if ENABLE_RENDERING
-$(top_builddir)/render-bitmaps.pl:
+$(top_builddir)/render-bitmaps.pl: $(top_srcdir)/render-bitmaps.pl.in
 	(cd $(top_builddir) && make render-bitmaps.pl)
 
-$(icon_sizes):
-	for size in $(icon_sizes); do \
-		for file in $(icon_in_files); do \
-			$(top_builddir)/render-bitmaps.pl -s $$size -o $(top_builddir) $(srcdir)/$$file; \
-		done; \
+%.png: %.svg $(top_builddir)/render-bitmaps.pl
+	for size in $(render_sizes); do \
+		$(top_builddir)/render-bitmaps.pl -s $$size -o $(top_builddir) $<; \
 	done
+	touch $@
 
-dist-hook: $(top_builddir)/render-bitmaps.pl
-	for size in $(icon_sizes); do \
-		for file in $(icon_in_files); do \
-			$(top_builddir)/render-bitmaps.pl -s $$size -o $(top_builddir) $(srcdir)/$$file; \
-		done; \
-		cp -a $(top_builddir)/$$size $(distdir)/$$size; \
+dist-hook: $(icon_files)
+	for size in $(render_sizes); do \
+		cp -a $(top_builddir)/$$size $(top_distdir)/$$size; \
 	done
 else
-dist-hook:
-	for size in $(icon_sizes); do \
-		for file in $(icon_files); do \
-			for context in $(top_builddir)/$$size/*; do \
-				if [ ! -f $(top_builddir)/$$size/$$context/$$file ]; then \
-					echo "ERROR: Icon $$file not rendered at size $$size."; \
-					exit 1; \
-				fi; \
-			done; \
-		done; \
-		cp -a $(top_builddir)/$$size $(distdir)/$$size; \
+%.png: %.svg
+	touch $@
+
+dist-hook: $(icon_files)
+	for size in $(render_sizes); do \
+		cp -a $(top_srcdir)/$$size $(top_distdir)/$$size; \
 	done
 endif
 
+all: $(icon_files)
+$(render_sizes): $(icon_files)
+
 install-data-local:
-	for size in $(icon_sizes); do \
+	for size in $(render_sizes); do \
 		for file in $(icon_files); do \
-			for context in $(top_srcdir)/$$size/*; do \
+			for dir in `find $(top_srcdir)/$$size/* -type d`; do \
+				context="`basename $$dir`"; \
 				$(mkdir_p) $(DESTDIR)$(themedir)/$$size/$$context; \
 				$(install_sh_DATA) $(top_srcdir)/$$size/$$context/$$file $(DESTDIR)$(themedir)/$$size/$$context/$$file; \
 			done; \
@@ -46,9 +41,10 @@ install-data-local:
 	done
 
 uninstall-local:
-	for size in $(icon_sizes); do \
+	for size in $(render_sizes); do \
 		for file in $(icon_files); do \
-			for context in $(top_srcdir)/$$size/*; do \
+			for dir in `find $(top_srcdir)/$$size/* -type d`; do \
+				context="`basename $$dir`"; \
 				rm -f $(DESTDIR)$(themedir)/$$size/$$context/$$file; \
 			done; \
 		done; \
@@ -56,6 +52,9 @@ uninstall-local:
 
 EXTRA_DIST =			\
 	$(icon_in_files)
+
+CLEANFILES =			\
+	$(icon_files)
 
 MAINTAINERCLEANFILES =		\
 	Makefile.in
