2008-09-05  Rodney Dawes  <dobey.pwns@gmail.com>
	* render-bitmaps.pl.in:
	Only print the context and name, and not "Rendering" or the ellipse

	* svg/.gitignore:
	Update for the rendercache files

	* svg/Makefile.am:
	Update the build to use rendercache files to list all the icons produced from
	the SVG files and dist the rendercache so that install can work automatically

--- a/render-bitmaps.pl.in
+++ b/render-bitmaps.pl.in
@@ -64,7 +64,7 @@ sub render_icons {
 			    system ("mkdir -p $dir");
 			}
 			my $cmd = "$inkscape -i $box->{id} -e $dir/$name.png $filename > /dev/null";
-                        print "Rendering $dir/$name.png...\n";
+                        print "$context/$name.png\n";
 			system ($cmd);
 		    }
 		}
