2008-09-09  Rodney Dawes  <dobey.pwns@gmail.com>
	* render-bitmaps.pl.in:
	if the output directory was passed in, make sure it ends with a /
	(render_icons):
	Remove the / between $outdir and $size in the declaration of $dir

--- a/render-bitmaps.pl.in
+++ b/render-bitmaps.pl.in
@@ -27,7 +27,7 @@ GetOptions ("size|s=s" => \$sizeonly,
 
 ############################################################################
 
-use Data::Dumper;
+$outdir =~ s|[/]?$|/|g if ($outdir ne "");
 
 sub render_icons {
     my $filename = shift;
@@ -69,7 +69,7 @@ sub render_icons {
 		foreach my $box (@{$plate->{rect}}) {
 		    if (defined $box->{'inkscape:label'}) {
 			my $size = $box->{'inkscape:label'};
-			my $dir = "$outdir/$size/$context";
+			my $dir = "$outdir$size/$context";
 
                         # Skip this box if the size isn't the requested size
                         next if (defined $sizeonly && $size ne $sizeonly);
